
  - Allow libraries in the LIBS variable to explicitly include the prefix
    and suffix, even when using the GNU linker.
    (Bug reported by Neal Becker.)

  - Use DOS-standard CR-LF line endings in the scons.bat file.
    (Bug reported by Gary Ruben.)

  - Doc changes:  Eliminate description of deprecated "name" keyword
    argument from Builder definition (reported by Gary Ruben).

  From Anthony Roach:

  - Use a different static object suffix (.os) when using gcc so shared
    and static objects can exist side-by-side in the same directory.

  - Allow the same object files on Win32 to be linked into either
    shared or static libraries.



RELEASE 0.10 - Thu, 16 Jan 2003 04:11:46 -0600

  From Derrick 'dman' Hudson:

  - Support Repositories on other file systems by symlinking or
    copying files when hard linking won't work.

  From Steven Knight:

  - Remove Python bytecode (*.pyc) files from the scons-local packages.

  - Have FunctionActions print a description of what they're doing
    (a representation of the Python call).

  - Fix the Install() method so that, like other actions, it prints
    what would have happened when the -n option is used.

  - Don't create duplicate source files in a BuildDir when the -n
    option is used.

  - Refactor the Scanner interface to eliminate unnecessary Scanner
    calls and make it easier to write efficient scanners.

  - Added a "recursive" flag to Scanner creation that specifies the
    Scanner should be invoked recursively on dependency files returned
    by the scanner.

  - Significant performance improvement from using a more efficient
    check, throughout the code, for whether a Node has a Builder.

  - Fix specifying only the source file to MultiStepBuilders such as
    the Program Builder.  (Bug reported by Dean Bair.)

  - Fix an exception when building from a file with the same basename as
    the subdirectory in which it lives.  (Bug reported by Gerard Patel.)
